# unreal

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
cli/: Cargo.toml
cli/src/: main.rs
configs/: 4_25.toml  debug.toml  default.toml
dumper/: Cargo.toml
dumper/src/: config.rs  cycles.rs  engine.rs  lib.rs  macros.rs  main.rs  names.rs  objects.rs  offsets.rs  package.rs  process.rs  ptr.rs  sdk.rs  utils.rs
dumper/src/codegen/: rust.rs
dumper/src/offsets/: default.rs  mod.rs
offsets/: Cargo.toml
offsets/src/: default.rs  lib.rs
samples/: dependencies.dot
sourcer/: Cargo.toml  workspace.toml
sourcer/src/: deps.rs  lib.rs  property.rs  registry.rs
sourcer/src/lang/: dummy.rs  mod.rs  rust.rs
src/: lib.rs  macros.rs  utils.rs
src/engine/: field.rs  function.rs  mod.rs  names.rs  object.rs  property.rs  struct.rs
src/offsets/: default.rs  mod.rs
ucore/: Cargo.toml
ucore/src/: api.rs  array.rs  cache.rs  context.rs  lib.rs  macros.rs  map.rs  name.rs  object.rs  ptr.rs  set.rs  shared.rs  string.rs  text.rs  utils.rs
ucore/src/engine/: function.rs  mod.rs  property.rs
