[package]
name = "dumper"
description = "Tool to generate SDK for UE games"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sourcer = { path = "../sourcer" }
offsets = { path = "../offsets" }
argh = "0.1.10"
bytemuck = { version = "1.13.0", features = ["derive"] }
color-eyre = "0.6.2"
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.17"
memflex = { version = "0.4.1", features = ["external"] }
once_cell = "1.17.1"
paste = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.139"
