[package]
name = "dumper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.20"
memflex = { version = "0.7.0", features = ["external"] }
petgraph = "0.6.3"
serde = { version = "1.0.185", features = ["derive"] }
toml = "0.7.6"

ucore = { path = "../ucore" }
