[package]
name = "uedumper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ucore = { path = "../ucore" }
anyhow = "1.0.75"
bitflags = "2.4.0"
log = "0.4.20"
petgraph = "0.6.3"
serde = { version = "1.0.185", features = ["derive"] }
indicatif = "0.17.6"
