[package]
name = "sourcer"
description = "Crate to generate source code"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
offsets = { path = "../offsets" }
derive_more = "0.99.17"
log = "0.4.17"
eyre = "0.6.8"
