[package]
name = "ucore"
description = "Library with core UE components"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2.4.0"
once_cell = "1.18.0"
memflex = { version = "0.8.0", default-features = false }
twox-hash = { version = "1.6.3", default-features = false }
